# mac-ocr

./: .gitignore  README.md  mac_ocr.py  pyproject.toml
