[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-ocr"
version = "0.1.0"
description = "CLI for document OCR using macOS Vision"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ocr", "vision", "macos", "text-extraction", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing",
]

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "pillow>=8.0.0",
    "pyobjc-framework-Vision>=9.0",
    "pyobjc-framework-Quartz>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
mac-ocr = "mac_ocr:main"

[tool.setuptools]
py-modules = ["mac_ocr"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
